added tests and updated implementation